--- a/backend-server/views/login.ejs
+++ b/backend-server/views/login.ejs
@@ -87,7 +87,10 @@ form.addEventListener('submit' , async (e) => {
         const res = await fetch('/login' ,{
             method :'POST',
             body: JSON.stringify({email,password}),
-            headers:{'Content-Type' : 'application/json'}
+            headers:{'Content-Type' : 'application/json' ,
+                     'Access-Control-Allow-Origin' : ' *',
+
+          }
 
         });
 
