--- a/backend-server/views/login.ejs
+++ b/backend-server/views/login.ejs
@@ -88,7 +88,7 @@ form.addEventListener('submit' , async (e) => {
             method :'POST',
             body: JSON.stringify({email,password}),
             headers:{'Content-Type' : 'application/json' ,
-                     'Access-Control-Allow-Origin' : ' *',
+                     'Access-Control-Allow-Origin' : 'https://627ec3d998013014539f99b3--loquacious-seahorse-3b512a.netlify.app',
 
           }
 
